--- a/index.css
+++ b/index.css
@@ -7,15 +7,22 @@ html, body {
     padding: 0;
 }
 
-#root {
+/* #root {
     display: flex;
     flex-direction: column;
     margin-left: 50px;
     margin-right: 50px;
+} */
+    
+    .site-wrapper {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
     
 
-    
-}
 
 body::-webkit-scrollbar {
     display: none;
@@ -43,6 +50,13 @@ body::-webkit-scrollbar {
       font-weight: 900;
       font-size: 25px;
   }
+
+
+  a.active-link {
+    font-weight: bold;
+    text-decoration: underline;
+    color: #161616;
+}
   
   header a {
       text-decoration: none;
@@ -336,4 +350,42 @@ i[class*='van-type-'] {
     color: #161616;
     text-decoration: underline;
     font-weight: 600;
+}
+
+.host-van-link-wrapper {
+    color: unset;
+    text-decoration: unset;
+}
+
+.host-vans-list {
+    padding-inline: 26px;
+}
+
+.host-vans-title {
+    padding-inline: 26px;
+}
+
+.host-van-single {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 15px;
+    padding-block: 18px;
+    padding-left: 24px;
+}
+
+.host-van-single > img {
+    height: 70px;
+    border-radius: 5px;
+    margin-right: 17px;
+}
+
+.host-van-info h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-block: 10px;
+}
+
+.host-van-info p {
+    margin-block: 10px;
 }
