Added Not found page and added filters

--- a/index.css
+++ b/index.css
@@ -363,7 +363,7 @@ i[class*='van-type-'] {
     padding: 27px;
 }
 
-.van-detail-container .back-button {
+.van-detail-container  {
     color: black;
     text-decoration: none;
 }
@@ -548,14 +548,14 @@ i[class*='van-type-'] {
 }
 
 
-/* GlowingLink.css */
+/* back button css */
 
   
   .back-button {
     display: inline-block;
     padding: 10px 20px;
     background-color: #080809;
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
     font-size: 18px;
@@ -567,4 +567,30 @@ i[class*='van-type-'] {
   .back-button span {
     display: inline-block;
     margin-left: 10px;
+  }
+
+
+  .style-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-inline: 26px;
+    
+    
+
+  }
+
+  .back-home{
+        font-size: 20px;
+        max-width:240px;
+        padding:10px;
+        padding-left: 35px;
+        padding-right: 35px;
+        font-weight: bold;
+        color:white;
+        border-radius: 20px;
+        text-decoration: none;
+        background-color: rgb(0, 0, 0);
+
+   
   }
