--- a/index.css
+++ b/index.css
@@ -577,6 +577,7 @@ i[class*='van-type-'] {
     font-size: 18px;
     transition: background-color 0.3s ease;
     margin-top: 20px;
+    border: 2px solid rgb(74, 140, 226)
   }
   
   
@@ -652,7 +653,7 @@ i[class*='van-type-'] {
 
 .login-form > button {
     background-color: #FF8C38;
-    border: none;
+    border: 4px outset black;
     border-radius: 6px;
     height: 55px;
     margin-top: 22px;
