--- a/index.css
+++ b/index.css
@@ -577,7 +577,7 @@ i[class*='van-type-'] {
     font-size: 18px;
     transition: background-color 0.3s ease;
     margin-top: 20px;
-    border: 2px solid rgb(74, 140, 226)
+    border: 3px dotted rgb(239, 239, 246)
   }
   
   
