--- a/index.css
+++ b/index.css
@@ -38,14 +38,15 @@ body::-webkit-scrollbar {
       display: flex;
       align-items: center;
       padding-block: 10px;
-      background-color: #FFCC8D;
+      background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(11,126,131,1) 36%, rgba(0,212,255,1) 100%);;
       margin-top: 25px;
       border-radius: 30px 30px 0px 0px;
+      
       
   }
   
   header .site-logo {
-      color: black;
+      color: white;
       margin-right: auto;
       text-transform: uppercase;
       font-weight: 900;
@@ -56,14 +57,15 @@ body::-webkit-scrollbar {
   a.active-link {
     font-weight: bold;
     text-decoration: underline;
-    color: #161616;
+    color: white;
 }
   
   header a {
       text-decoration: none;
-      color: #4D4D4D;
+      color: white;
       font-weight: 600;
       padding: 5px 20px;
+     filter: drop-shadow(2px 2px 0px #000000) ;
   }
   
   header a:hover {
@@ -384,9 +386,9 @@ i[class*='van-type-'] {
     text-decoration: none;
 }
 
-.van-detail-container .back-button:visited {
+/* .van-detail-container .back-button:visited {
     
-}
+} */
 
 .van-detail-container .back-button span {
     text-decoration: underline;
